--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -142,7 +142,7 @@
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 10px;
-    color: #9a4e28;
+    color: #7b2e00;
     text-shadow: 0px 0px 4px #ec9b72;
 }
 
@@ -227,4 +227,109 @@
 .pagination{
     display: table !important;
     margin: 20px auto !important;
+}
+
+.star_style
+{
+    font-size: 20px;
+    color: #e4ca04;
+}
+
+.stars_style
+{
+    float: right;
+    margin-top: -30px;
+    
+}
+
+.pagination > .active > a, 
+.pagination > .active > span, 
+.pagination > .active > a:hover, 
+.pagination > .active > span:hover, 
+.pagination > .active > a:focus, 
+.pagination > .active > span:focus
+{
+    z-index: 3;
+    color: #fff;
+    cursor: default;
+    background-color: #481b00;
+    border-color: #481b00;
+}
+
+.pagination
+{
+ border: 1px solid #ffdd42;
+}
+
+.pagination > li > a, .pagination > li > span 
+{
+    border: 1px solid #ffdd42;
+}
+
+.pagination > li > a:hover, 
+.pagination > li > span:hover, 
+.pagination > li > a:focus, 
+.pagination > li > span:focus
+{
+    color: #481b00;
+}
+.pagination > li > a, 
+.pagination > li > span
+{
+    color: #481b00;
+}
+
+.navbar_small_links
+{
+    display: none;
+}
+.btn_custom
+{
+    float: right;
+    margin: 15px;
+}
+
+
+.navbar_small_links
+{
+    background: blanchedalmond;
+    margin: 0;
+    position: absolute;
+    right: 31px;
+    width: 330px;
+    z-index: 999;
+    margin-top: 48px;
+    padding: 0;
+    list-style: none;
+}
+.navbar_small_links li
+{
+    padding: 10px;
+    border: 1px solid #fbe7c3;
+    font-size: 15px;
+    font-weight: 700;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+.navbar_small_links li:hover
+{
+    background-color: black;
+    color: white;
+}
+
+@media (max-width: 680px){
+    .item_style
+    {
+        margin-bottom: 35px;
+    }
+}
+@media (max-width: 520px){
+    .item_style
+    {
+        margin-bottom: 50px;
+    }
+}
+html
+{
+    background: #eae8d8;
 }
