--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -7,352 +7,207 @@
     width: 100%;
     background-position: 50% 0%;
     height: 100%;
+
 }
-.Layer_1 {
-  background-image: url("Layer 1.png");
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 1300px;
-  height: 120px;
-  z-index: 140;
+.left-title h2
+{
+    font-weight: 700;
+    color: white;
 }
-.Layer_15 {
-  background-image: url("Layer 15.png");
-  position: absolute;
-  left: 0px;
-  top: 11px;
-  width: 1300px;
-  height: 109px;
-  z-index: 141;
+.left-title
+{
+    padding-top: 20px;
+    padding-bottom: 0px;
+}
+
+#imaginary_container{
+    margin-top: 20px;
+    margin-bottom: 10px;  
+    width: 50%;
+    float: right;  
+}
+.stylish-input-group .input-group-addon{
+    background: white !important; 
+}
+.stylish-input-group .form-control{
+    border-right:0; 
+    box-shadow:0 0 0; 
+    border-color:#ccc;
+}
+.stylish-input-group button{
+    border:0;
+    background:transparent;
+}
+
+.right-title-search{
+    padding-top: 16px;
+    padding-bottom: 0px;
+    float: right;
+}
+
+
+.navbar-default .navbar-nav > 
+.active > a,  
+.navbar-nav > li > a
+{
+    padding: 8px 35px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    font-size: 17px;
+    font-weight: bold;
+    color: white !important;
+    transition: all 500ms;
+}
+
+.navbar-default .navbar-nav > 
+.active > a, .navbar-default 
+.navbar-nav > .active > a:hover, 
+.navbar-default .navbar-nav > 
+.active > a:focus
+{
+    background: white;
+    color: #52a3c3 !important;
+}
+.navbar-nav > li > a:hover
+{
+    background: white !important;
+    color: #52a3c3 !important;
+}
+
+.navbar {
+    min-height: auto !important;
 }
 
 
 .secund-navbar
 {
-	padding: 0;
-    margin: 0;
+    padding: 20px 0px;
     display: flex;
-    float: right;
-    margin-right: 30px;
     list-style: none;
+    margin: auto;
+    width: 272px;
 }
 
-.footer-style
+.main_footer
 {
-	background: #d3c787;
-    border-radius: 5px;
+    background: white;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
 }
-
+.list-style-footer
+{
+    color: #52a3c3;
+    padding: 30px 0px;
+    margin: 0px;
+    margin: 0 auto;
+    width: 264px;
+}
 .secund-navbar li
 {
     padding: 10px 20px;
-    color: #7b2e00;
+    color: #52a3c3;
     transition: all 500ms;
     cursor: pointer;
     font-weight: 800;
 }
+
 .secund-navbar li:hover
 {
-	background-color: #7b2e00;
-	color:#d3c787;
+     background-color: #52a3c3;
+    color: rgb(255, 255, 255);
 }
+
 .home .active
 {
-	background-color: #7b2e00;
-	color:#d3c787;	
+    background-color: #7b2e00;
+    color:#d3c787;  
 }
+
 .secund-navbar li a 
 {
-	text-decoration: none;
-}
-.list-style-footer
-{
-	margin: 10px !important;
-	color:#7b2e00;
+    text-decoration: none;
 }
 
-.navbar-custom
+.ls > li
 {
-	position: relative;
-}
-/*.navbar-background-img
-{
-	background-image: url('../../images/navbar-background.png');
-	height: 120px;
-    margin-top: -40px;
-    position: relative;
-    background-repeat: repeat-x;
-}*/
-.main-navbar_custom
-{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    list-style: none;
-    font-size: 15px;
-    font-weight: 600;
-    width: 100%;
-    margin-top: 15px;
-    background: #dad2a8;
-    border-radius: 10px;
-    padding-right: 6px;	
-    padding-left: 6px;
+    width: 29%;
 }
 
-.main-navbar_custom li
+.appName_footer h2
 {
-    width: 23%;
-    padding: 9px 1%;
+    padding: 10px 12px;
     text-align: center;
-    color: black;
-    margin-bottom: 1px;
-    margin-top: 1px;
-    transition: all 500ms;
-    cursor: pointer;
-}
-
-.main-navbar_custom li:hover
-{
-	background:black;
-	color: #dad2a8;
-}
-
-.search-input_custom
-{
-	margin-top: 15px;
-    height: 40px;
-    border-radius: 9px;
-}
-
-.site_title
-{
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-.item_style
-{
-    margin-left: 2%; 
-    margin-right: 2%; 
-    background: #ffffff;
-    margin-top: 10px; 
-    margin-bottom: 10px; 
-    height:190px;
-}
-
-.item-box
-{
-    background: #ffffff;
-}
-.box-header
-{
-    background: #d5c68a;
-    padding: 6px 10px;
-    
+    color: #52a3c3;
 }
 
 
-.box-body a
-{
-    text-decoration:none;
-    color: #001dff;
-    font-weight: 600;
-}
-.box-body a h2
-{
-    font-size: 21px !important;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 10px;
-    color: #7b2e00;
-    text-shadow: 0px 0px 4px #ec9b72;
-}
-
-.box-body p 
-{
-    margin: 21px;
-}
-
-
-.box-body p a img
-{
-    margin-right: 10px;
-    margin-bottom: 10px;
-}
-
-.fb_like_btn
-{
-    background-image: url('../../images/s_fb_button.png');
-    background-repeat: no-repeat;
-    float: right;
-    height: 24px;
-    width: 57px;
-    background-size: 57px 24px;
-}
-
-.fb_share_btn
-{
-    background-image: url(../../images/like_.png);
-    background-repeat: no-repeat;
-    float: right;
-    height: 35px;
-    width: 65px;
-    background-size: 62px 46px;
-    margin-top: -12px;
-}
-.main_footer
-{
-    margin-bottom: 80px;
-    margin-top: 20px;
-}
-
-.items_box
-{
-    width: 109%;
-}
-
-.header_height
-{
-    height: 30px;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-}
-
-.site-contact
-{
-    margin-top: 121px;
-    margin-bottom: 70px;
-    background: #ffffff;
-    border-radius: 5px;
-}
-
-.contact_box{
-    margin: auto;
-    float: none;
-}
-.custom_btn
-{
-    width: 100px;
-    background: #7b2e00;
-    color: #ffffff;
-}
-
-@media (max-width: 991px)
-{
-    .items_box
+@media(max-width: 991px){
+    #imaginary_container{
+        width:73%;
+    }
+    .navbar-default .navbar-nav > 
+    .active > a, .navbar-nav > li > a
     {
-        width:95%;
+        padding: 8px 22px;
+    }
+}
+@media(max-width: 767px){
+    #imaginary_container{
+        float: none;
+        margin: auto;
+    }
+    .stylish-input-group{
+        width: 100%;
+    }
+    .right-title-search {
+    padding-top: 0px;
+    }
+
+    .left-title h2{
+        text-align: center;
+    }
+
+    .left-title {
+        padding-top: 0px;
+    }
+
+    .navbar-default .navbar-nav > 
+    .active > a,  
+    .navbar-nav > li > a
+    {
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+    }
+
+    .appName_footer h2{
+        padding: 0px 12px;
+    }
+
+    .secund-navbar {
+        padding: 10px 0px;
+    }
+    .list-style-footer
+    {
+        padding-bottom: 10px;
+        padding-top: 0px;
+    }
+
+}
+
+@media(max-width: 560px){
+    .nav_footer{
+        display: none;
+    }
+    .appName_footer{
+        width: 100%;
+    }
+}
+
+@media(max-width: 420px){
+    #imaginary_container {
+        width: 100%;
     }
 }
 
 
-.pagination{
-    display: table !important;
-    margin: 20px auto !important;
-}
-
-.star_style
-{
-    font-size: 20px;
-    color: #e4ca04;
-}
-
-.stars_style
-{
-    float: right;
-    margin-top: -30px;
-    
-}
-
-.pagination > .active > a, 
-.pagination > .active > span, 
-.pagination > .active > a:hover, 
-.pagination > .active > span:hover, 
-.pagination > .active > a:focus, 
-.pagination > .active > span:focus
-{
-    z-index: 3;
-    color: #fff;
-    cursor: default;
-    background-color: #481b00;
-    border-color: #481b00;
-}
-
-.pagination
-{
- border: 1px solid #ffdd42;
-}
-
-.pagination > li > a, .pagination > li > span 
-{
-    border: 1px solid #ffdd42;
-}
-
-.pagination > li > a:hover, 
-.pagination > li > span:hover, 
-.pagination > li > a:focus, 
-.pagination > li > span:focus
-{
-    color: #481b00;
-}
-.pagination > li > a, 
-.pagination > li > span
-{
-    color: #481b00;
-}
-
-.navbar_small_links
-{
-    display: none;
-}
-.btn_custom
-{
-    float: right;
-    margin: 15px;
-}
-
-
-.navbar_small_links
-{
-    background: blanchedalmond;
-    margin: 0;
-    position: absolute;
-    right: 31px;
-    width: 330px;
-    z-index: 999;
-    margin-top: 48px;
-    padding: 0;
-    list-style: none;
-}
-.navbar_small_links li
-{
-    padding: 10px;
-    border: 1px solid #fbe7c3;
-    font-size: 15px;
-    font-weight: 700;
-    transition: all 0.3s;
-    cursor: pointer;
-}
-.navbar_small_links li:hover
-{
-    background-color: black;
-    color: white;
-}
-
-@media (max-width: 680px){
-    .item_style
-    {
-        margin-bottom: 35px;
-    }
-}
-@media (max-width: 520px){
-    .item_style
-    {
-        margin-bottom: 50px;
-    }
-}
-html
-{
-    background: #eae8d8;
-}
