--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -5,8 +5,17 @@
 	background-repeat: no-repeat;
     display: table;
     width: 100%;
-    background-position: 50% 0%;
+    background-position: 50% 10%;
     height: 100%;
+
+
+    /*background: url(../../images/main_background.png);*/
+   /* background-size: cover;
+     background-repeat: no-repeat; 
+    display: table;
+    width: 100%;*/
+    /*background-position: 50% 17%;*/
+    /*height: 100%;*/
 
 }
 .left-title h2
@@ -91,8 +100,7 @@
 .main_footer
 {
     background: white;
-    position: fixed;
-    bottom: 0px;
+    position: absolute;
     width: 100%;
     z-index: 100;
 }
@@ -236,6 +244,93 @@
 .social-media-btns > .fb-like{
     padding-right: 4px;
 }
+
+.more_box_layout{
+    border-top: 2px solid #337ab7;
+    background: white;
+    padding: 10px 20px;
+}
+.more_box{
+    padding: 80px;
+}
+
+.cat_box{
+    background: #ffa737;
+    float: left;
+    margin: 5px;
+    width: 18%;
+    height: auto;
+    padding: 6% 5px;
+}
+
+.cat_box h3{
+    font-size: larger;
+    font-weight: 700;
+    float: left;
+    margin: 5px;
+    color: white;
+}
+
+
+    /*Widgets box styles */
+
+    .widget_name{
+        padding: 15px 15px;
+        font-size: 29px;
+        color: #337ab7;
+        font-weight: 700;
+    }
+    .widget_box_layout{
+        border-top:2px solid #337ab7;
+        background: white;
+    }
+    .widget_box{
+        padding:20px;
+    }
+    .widget_box img {
+        width: 89px;
+    }
+    .widget_item{
+        width: 89px;
+        float: left;
+        height: 130px;
+        margin-left: 4px;
+        margin-right: 4px;
+    }
+    .widget_box i {
+        font-size: 9px;
+    }
+
+
+
+    .widget_ll_box{
+        padding:20px;
+    }
+    .widget_ll_item{
+        float: left;
+        margin-left: 4px;
+        margin-right: 4px;
+        width: 144px;
+        height: 170px;
+    }
+    .widget_ll_item img{
+        width: 145px;
+    }
+
+    .widget_items_{
+        padding-bottom: 20px;
+    }
+    .widget_items_  img{
+        float: left;
+        padding: 0px 15px 5px 0px;
+    }
+
+.widget_{
+    padding-bottom: 40px;
+}
+
+    /*====== END ======*/
+
 
 
 @media(max-width: 991px){
