--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -1,431 +1,1 @@
-.body-background
-{
-	background: url('../../images/main_background.png') no-repeat fixed 0 0 rgba(0, 0, 0, 0);
-	background-size: cover;
-	background-repeat: no-repeat;
-    display: table;
-    width: 100%;
-    background-position: 50% 10%;
-    height: 100%;
-
-
-    /*background: url(../../images/main_background.png);*/
-   /* background-size: cover;
-     background-repeat: no-repeat; 
-    display: table;
-    width: 100%;*/
-    /*background-position: 50% 17%;*/
-    /*height: 100%;*/
-
-}
-.left-title h2
-{
-    font-weight: 700;
-    color: white;
-}
-.left-title
-{
-    padding-top: 20px;
-    padding-bottom: 0px;
-}
-
-#imaginary_container{
-    margin-top: 20px;
-    margin-bottom: 10px;  
-    width: 50%;
-    float: right;  
-}
-.stylish-input-group .input-group-addon{
-    background: white !important; 
-}
-.stylish-input-group .form-control{
-    border-right:0; 
-    box-shadow:0 0 0; 
-    border-color:#ccc;
-}
-.stylish-input-group button{
-    border:0;
-    background:transparent;
-}
-
-.right-title-search{
-    padding-top: 16px;
-    padding-bottom: 0px;
-    float: right;
-}
-
-
-.navbar-default .navbar-nav > 
-.active > a,  
-.navbar-nav > li > a
-{
-    padding: 8px 35px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    font-size: 17px;
-    font-weight: bold;
-    color: white !important;
-    transition: all 500ms;
-}
-
-.navbar-default .navbar-nav > 
-.active > a, .navbar-default 
-.navbar-nav > .active > a:hover, 
-.navbar-default .navbar-nav > 
-.active > a:focus
-{
-    background: white;
-    color: #52a3c3 !important;
-}
-.navbar-nav > li > a:hover
-{
-    background: white !important;
-    color: #52a3c3 !important;
-}
-
-.navbar {
-    min-height: auto !important;
-}
-
-
-.secund-navbar
-{
-    padding: 20px 0px;
-    display: flex;
-    list-style: none;
-    margin: auto;
-    width: 272px;
-}
-
-.main_footer
-{
-    background: white;
-    position: absolute;
-    width: 100%;
-    z-index: 100;
-}
-.list-style-footer
-{
-    color: #52a3c3;
-    padding: 30px 0px;
-    margin: 0px;
-    margin: 0 auto;
-    width: 264px;
-}
-.secund-navbar li
-{
-    padding: 10px 20px;
-    color: #52a3c3;
-    transition: all 500ms;
-    cursor: pointer;
-    font-weight: 800;
-}
-
-.secund-navbar li:hover
-{
-     background-color: #52a3c3;
-    color: rgb(255, 255, 255);
-}
-
-.home .active
-{
-    background-color: #7b2e00;
-    color:#d3c787;  
-}
-
-.secund-navbar li a 
-{
-    text-decoration: none;
-}
-
-.ls > li
-{
-    width: 29%;
-}
-
-.appName_footer h2
-{
-    padding: 10px 12px;
-    text-align: center;
-    color: #52a3c3;
-}
-
-
-
-
- /*Categories layout boxes*/
-
- .main_box_layout{
-    border-top: 2px solid #337ab7;
-    background: white;
-    padding: 10px 20px;
- }
-
- .cat_name{
-    font-size: 20px;
-    color: #337ab7;
-    font-weight: 700;
-    padding: 1px 20px;
- }
-
-
-
- /*categories items*/
-
-.item-box{
-    height: 140px;
-    border-bottom: 1px solid #a7d6ff;
-}
-
-.box-left{
-    float: left;
-    width: 120px;
-    padding: 10px;
-}
-.box-center{
-    float: left;
-    width: 60%;
-    padding: 0px 0px 5px 10px;
-}
-.box-center h3{
-    margin-top:6px;
-    font-size: 18px;
-}
-
-.box-center h3 a{
-    color: black;
-    font-weight: 600;
-}
-
-.box-center p{
-    font-size: 13px;
-}
-
-
-.box-right{
-    float: right;
-    width: 140px;
-    height: 140px;
-}
-
-
-.button_play_box{
-    float: right;
-    padding-bottom: 5px;
-    margin-top: 10px;
-}
-
-.button_play{
-    font-size: 16px;
-    font-weight: 600;
-    padding: 5px 18px;
-    border-radius: 12px;
-    text-transform: uppercase;
-}
-
-.box-review{
-    float: right;
-    padding: 2px 20px;
-}
-
-.box-review span{
-    font-size: 11px;
-}
-
-.stars_style{
-    float: right;
-}
-.social-media-btns{
-    float: right;
-    display: inline-flex;
-    display: -webkit-inline-box;
-    padding: 7px 1px;
-}
-.social-media-btns > .fb-like{
-    padding-right: 4px;
-}
-
-.more_box_layout{
-    border-top: 2px solid #337ab7;
-    background: white;
-    padding: 10px 20px;
-}
-.more_box{
-    padding: 80px;
-}
-
-.cat_box{
-    background: #ffa737;
-    float: left;
-    margin: 5px;
-    width: 18%;
-    height: auto;
-    padding: 6% 5px;
-}
-
-.cat_box h3{
-    font-size: larger;
-    font-weight: 700;
-    float: left;
-    margin: 5px;
-    color: white;
-}
-
-
-    /*Widgets box styles */
-
-    .widget_name{
-        padding: 15px 15px;
-        font-size: 29px;
-        color: #337ab7;
-        font-weight: 700;
-    }
-    .widget_box_layout{
-        border-top:2px solid #337ab7;
-        background: white;
-    }
-    .widget_box{
-        padding:20px;
-    }
-    .widget_box img {
-        width: 89px;
-    }
-    .widget_item{
-        width: 89px;
-        float: left;
-        height: 130px;
-        margin-left: 4px;
-        margin-right: 4px;
-    }
-    .widget_box i {
-        font-size: 9px;
-    }
-
-
-
-    .widget_ll_box{
-        padding:20px;
-    }
-    .widget_ll_item{
-        float: left;
-        margin-left: 4px;
-        margin-right: 4px;
-        width: 144px;
-        height: 170px;
-    }
-    .widget_ll_item img{
-        width: 145px;
-    }
-
-    .widget_items_{
-        padding-bottom: 20px;
-    }
-    .widget_items_  img{
-        float: left;
-        padding: 0px 15px 5px 0px;
-    }
-
-.widget_{
-    padding-bottom: 40px;
-}
-
-    /*====== END ======*/
-
-
-
-@media(max-width: 991px){
-    #imaginary_container{
-        width:73%;
-    }
-    .navbar-default .navbar-nav > 
-    .active > a, .navbar-nav > li > a
-    {
-        padding: 8px 22px;
-    }
-}
-@media(max-width: 845px){
-    .box-center{
-        width:50%;
-    }
-}
-@media(max-width: 767px){
-    #imaginary_container{
-        float: none;
-        margin: auto;
-    }
-    .stylish-input-group{
-        width: 100%;
-    }
-    .right-title-search {
-    padding-top: 0px;
-    }
-
-    .left-title h2{
-        text-align: center;
-    }
-
-    .left-title {
-        padding-top: 0px;
-    }
-
-    .navbar-default .navbar-nav > 
-    .active > a,  
-    .navbar-nav > li > a
-    {
-        border-top-left-radius: 0px;
-        border-top-right-radius: 0px;
-    }
-
-    .appName_footer h2{
-        padding: 0px 12px;
-    }
-
-    .secund-navbar {
-        padding: 10px 0px;
-    }
-    .list-style-footer
-    {
-        padding-bottom: 10px;
-        padding-top: 0px;
-    }
-    .main_box_layout{
-        float: left;
-    }
-
-}
-
-@media(max-width: 700px){
-    .item-box{
-        height: auto;
-    }
-    .box-left{
-        float: none;
-        margin: auto;
-    }
-    .box-center{
-        float: none;
-        margin: auto;
-        width: 80%;
-    }
-    .box-right{
-        float: none;
-        margin: auto;
-    }
-}
-
-@media(max-width: 560px){
-    .nav_footer{
-        display: none;
-    }
-    .appName_footer{
-        width: 100%;
-    }
-}
-
-@media(max-width: 420px){
-    #imaginary_container {
-        width: 100%;
-    }
-}
-
-
+.body-background{	background: url('../../images/main_background.png') no-repeat fixed 0 0 rgba(0, 0, 0, 0);	background-size: cover;	background-repeat: no-repeat;    display: table;    width: 100%;    background-position: 50% 15%;    height: 100%;.contact_box{    -webkit-touch-callout: none;    -webkit-user-select: none;    -khtml-user-select: none;    -moz-user-select: none;    -ms-user-select: none;    user-select: none;}    /*background: url(../../images/main_background.png);*/   /* background-size: cover;     background-repeat: no-repeat;     display: table;    width: 100%;*/    /*background-position: 50% 17%;*/    /*height: 100%;*/}.left-title h2{    font-weight: 700;    color: white;}.left-title{    padding-top: 20px;    padding-bottom: 0px;}#imaginary_container{    margin-top: 20px;    margin-bottom: 10px;      width: 50%;    float: right;  }.stylish-input-group .input-group-addon{    background: white !important; }.stylish-input-group .form-control{    border-right:0;     box-shadow:0 0 0;     border-color:#ccc;}.stylish-input-group button{    border:0;    background:transparent;}.right-title-search{    padding-top: 16px;    padding-bottom: 0px;    float: right;}.navbar-default .navbar-nav > .active > a,  .navbar-nav > li > a{    padding: 8px 35px;    border-top-left-radius: 10px;    border-top-right-radius: 10px;    font-size: 17px;    font-weight: bold;    color: white !important;    transition: all 500ms;}.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{    background: white;    color: #52a3c3 !important;}.navbar-nav > li > a:hover{    background: white !important;    color: #52a3c3 !important;}.navbar {    min-height: auto !important;}.secund-navbar{    padding: 20px 0px;    display: flex;    list-style: none;    margin: auto;    width: 272px;}.main_footer{    background: white;    position: absolute;    width: 100%;    z-index: 100;}.list-style-footer{    color: #52a3c3;    padding: 30px 0px;    margin: 0 auto;    width: 301px;}.secund-navbar li{    padding: 10px 20px;    color: #52a3c3;    transition: all 500ms;    cursor: pointer;    font-weight: 800;}.secund-navbar li:hover{     background-color: #52a3c3;    color: rgb(255, 255, 255);}.home .active{    background-color: #7b2e00;    color:#d3c787;  }.secund-navbar li a {    text-decoration: none;}.ls > li{    width: 29%;}.appName_footer h2{    padding: 10px 12px;    text-align: center;    color: #52a3c3;} /*Categories layout boxes*/ .main_box_layout{    border-top: 2px solid #337ab7;    background: white;    padding: 10px 20px; } .cat_name{    font-size: 20px;    color: #337ab7;    font-weight: 700;    padding: 1px 20px; } /*categories items*/.item-box{    height: 140px;    border-bottom: 1px solid #a7d6ff;}.box-left{    float: left;    width: 120px;    padding: 10px;}.box-center{    float: left;    width: 60%;    padding: 0px 0px 5px 10px;}.box-center h3{    margin-top:6px;    font-size: 18px;}.box-center h3 a{    color: black;    font-weight: 600;}.box-center p{    font-size: 13px;}.box-right{    float: right;    width: 140px;    height: 140px;}.button_play_box{    float: right;    padding-bottom: 5px;    margin-top: 10px;}.button_play{    font-size: 16px;    font-weight: 600;    padding: 5px 18px;    border-radius: 12px;    text-transform: uppercase;}.box-review{    float: right;    padding: 2px 20px;}.box-review span{    font-size: 11px;}.stars_style{    float: right;}.social-media-btns{    float: right;    display: inline-flex;    display: -webkit-inline-box;    padding: 7px 1px;}.social-media-btns > .fb-like{    padding-right: 4px;}.more_box_layout{    border-top: 2px solid #337ab7;    background: white;    padding: 10px 20px;}.more_box{    padding: 80px;}.cat_box{    background: #ffa737;    float: left;    margin: 5px;    width: 18%;    height: auto;    padding: 6% 5px;}.cat_box h3{    font-size: larger;    font-weight: 700;    float: left;    margin: 5px;    color: white;}    /*Widgets box styles */    .widget_name{        padding: 15px 15px;        font-size: 29px;        color: #337ab7;        font-weight: 700;    }    .widget_box_layout{        border-top:2px solid #337ab7;        background: white;    }    .widget_box{        padding:20px;    }    .widget_box img {        width: 89px;    }    .widget_item{        width: 89px;        float: left;        height: 130px;        margin-left: 4px;        margin-right: 4px;    }    .widget_box i {        font-size: 9px;    }    .widget_ll_box{        padding:20px;    }    .widget_ll_item{        float: left;        margin-left: 4px;        margin-right: 4px;        width: 144px;        height: 170px;    }    .widget_ll_item img{        width: 145px;    }    .widget_items_{        padding-bottom: 20px;    }    .widget_items_  img{        float: left;        padding: 0px 15px 5px 0px;    }.widget_{    padding-bottom: 40px;}    /*====== END ======*/@media(max-width: 991px){    #imaginary_container{        width:73%;    }    .navbar-default .navbar-nav >     .active > a, .navbar-nav > li > a    {        padding: 8px 22px;    }}@media(max-width: 845px){    .box-center{        width:50%;    }}@media(max-width: 767px){    #imaginary_container{        float: none;        margin: auto;    }    .stylish-input-group{        width: 100%;    }    .right-title-search {    padding-top: 0px;    }    .left-title h2{        text-align: center;    }    .left-title {        padding-top: 0px;    }    .navbar-default .navbar-nav >     .active > a,      .navbar-nav > li > a    {        border-top-left-radius: 0;        border-top-right-radius: 0;    }    .appName_footer h2{        padding: 0px 12px;    }    .secund-navbar {        padding: 10px 0;    }    .list-style-footer    {        padding-bottom: 10px;        padding-top: 0;    }    .main_box_layout{        float: left;    }}@media(max-width: 700px){    .item-box{        height: auto;    }    .box-left{        float: none;        margin: auto;    }    .box-center{        float: none;        margin: auto;        width: 80%;    }    .box-right{        float: none;        margin: auto;    }}@media(max-width: 560px){    .nav_footer{        display: none;    }    .appName_footer{        width: 100%;    }}@media(max-width: 420px){    #imaginary_container {        width: 100%;    }}
